--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 
 .vertical-menu a
 {
-  background-color: aqua;
+  background-color: #04aa6d;
   color:black;
   display: block;
   padding: 12px;
