--- a/style.css
+++ b/style.css
@@ -12,10 +12,10 @@
 
 .vertical-menu a
 {
-  background-color: #04aa6d;
+  background-color: #4202f3;
   color:black;
   display: block;
-  padding: 12px;
+  padding: 3px;
   text-decoration: none;
 
 }
