--- a/style.css
+++ b/style.css
@@ -16,8 +16,8 @@
 }
 
 .vertical-menu a:hover{
-  background-color: #9aaeb9;
+  background-color: #4202f3;
 }
 body{
-  background-color: rgb(235, 71, 207);
+  background-color: #9aaeb9;
 }
