--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 .vertical-menu a {
-  background-color: #4202f3;
+  background-color: #7d719e;
   color:black;
   display: block;
   padding: 3px;
